# codebase-genius

./: .augmentignore  .gitignore  API.md  CHANGELOG.md  README.md
.augment/rules/: general instructions.md
.augment/rules/imported/: jaclang.instructions.md  streamlit.instructions.md
.github/workflows/: ci.yml  jac-exception-lint.yml
backend/: README.md  main.jac  pyproject.toml  requirements.txt  tmp_micrograd.json  tmp_micrograd_resp.json  tmp_req_diagrams.json  tmp_req_diagrams2.json  tmp_req_diagrams3.json
backend/agents/: CodeAnalyzer.jac  DocGenie.jac  RepoMapper.jac  Supervisor.jac
backend/graph/: builders.jac  edges.jac  nodes.jac
backend/prompts/: docgen.md
backend/utils/: README.md  __init__.py  cache.py  diagram_gen.py  fs_map.py  output.py  repo.py  ts_analyze.py
docs/: REPORT.md
docs/openapi/: ccg.openapi.yaml
docs/postman/: ccg.postman_collection.json
frontend/: README.md  __init__.py  api_client_graph.py  app.py  pyproject.toml
frontend/.streamlit/: config.toml  secrets.toml
tests/: test_diagram_gen.py  test_frontend_api_graph.py  test_fs_map.py  test_markdown_structure.py  test_ts_analyze.py
