[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "byllm>=0.4.5",
    "gitpython==3.1.45",
    "jac-cloud>=0.2.10",
    "jaclang==0.8.10",
    "markdownify==1.2.0",
    "pillow>=10.4.0",
    "pytest==8.4.2",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "tqdm==4.67.1",
    "tree-sitter==0.25.2",
    "tree-sitter-languages>=1.10.2",
]
